force-app/main/default/objects/Assessment__c/Assessment__c.object-meta.xml
<CustomObject>
    <description>Used to evaluate BBQ budgets, including scores and organizer observations.</description>
    <label>Assessment</label>
    <nameField>
        <displayFormat>Assessment-{000}</displayFormat>
        <label>Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>