force-app/main/default/objects/Assessment__c/fields/BBQ_Budget__c.field-meta.xml
<CustomField>
    <fullName>BBQ_Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field of relationship with the object Roasted Budget</description>
    <label>BBQ Budget</label>
    <referenceTo>BBQ_Budget__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>