force-app/main/default/objects/Assessment__c/fields/Observations__c.field-meta.xml
<CustomField>
    <fullName>Observations__c</fullName>
    <description>Text area field representing comments on the grade given.</description>
    <label>Observations</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>