force-app/main/default/objects/Assessment__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Score assigned by the organizers, with a range from 0 to 10.</description>
    <label>Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>