force-app/main/default/objects/Assessment__c/validationRules/score_right.validationRule-meta.xml
<ValidationRule>
    <fullName>score_right</fullName>
    <active>true</active>
    <description>Score must be between 0 and 10</description>
    <errorConditionFormula>OR( Score__c &lt; 0,  Score__c &gt; 10 )</errorConditionFormula>
    <errorMessage>The score must be between 0 and 10.</errorMessage>
</ValidationRule>